# quantframe-react

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Quantframe.code-workspace  README.md  Release Note.md  build.sh  package.json  pnpm-lock.yaml  quantframe-react.code-workspace  tsconfig.json  vite.config.ts
src-tauri/: 1.csv  Cargo.toml  price_data.csv  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  post.rs  price_history.rs  stock_item.rs  stock_item_old.rs  stock_riven.rs  stock_riven_old.rs  sub_type.rs  transaction.rs  transaction_old.rs
src-tauri/entity/src/dto/: financial_graph.rs  financial_report.rs  mod.rs  pagination.rs  price_history.rs  sort.rs  stock_entry_overview.rs  sub_type.rs
src-tauri/entity/src/enums/: field_change.rs  mod.rs  riven_attribute_grade.rs  riven_grade.rs  stock_status.rs  stock_type.rs  transaction_item_type.rs  transaction_type.rs
src-tauri/entity/src/setting/: mod.rs  setting.rs
src-tauri/entity/src/stock/: mod.rs
src-tauri/entity/src/stock_item/: mod.rs  stock_item.rs
src-tauri/entity/src/stock_riven/: mod.rs  stock_riven.rs
src-tauri/entity/src/trade_entry/: mod.rs  trade_entry.rs
src-tauri/entity/src/transaction/: mod.rs  transaction.rs  transaction_wat.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220120_000001_create_post_table.rs  m20240406_104026_create_transaction_table.rs  m20240406_135257_create_stock_item_table.rs  m20240406_135307_create_stock_riven_table.rs  m20240406_135323_create_wish_list.rs  m20240406_135323_create_wish_list_table.rs  m20250127_210013_add_hide_wishlist.rs  m20250823_135631_add_uuid_to_stock_riven.rs  m20251016_203616_stock_add_min_profit_sma.rs  m20251108_000558_add_profit_to_transactions.rs  m20251118_125228_create_trade_entry.rs  m20251206_120316_create_settings.rs  m20251227_211048_add_wish_minimum_price.rs  m20260131_103740_add_tra_credits.rs  m20260710_124000_add_properties.rs  m20260710_125000_drop_min_price_columns.rs  m20260715_160000_make_properties_nullable.rs  main.rs
src-tauri/qf_api/: .gitignore  Cargo.toml  README.md
src-tauri/qf_api/src/: client.rs  lib.rs  utils.rs
src-tauri/resources/: allItemData.csv  tos.md
src-tauri/resources/lang/: en.json
src-tauri/resources/themes/: cyberpunk.json  default.json
src-tauri/service/: Cargo.toml
src-tauri/service/src/: error_ext.rs  lib.rs
src-tauri/service/tests/: mock.rs  prepare.rs
src-tauri/src/: auth.rs  cache.rs  database.rs  debug.rs  enums.rs  error.rs  handler.rs  helper.rs  lib.rs  live_scraper.rs  logger.rs  macros.rs  main.rs  orders.rs  price_scraper.rs  settings.rs  structs.rs  wfm_client.rs  whisper_scraper.rs
src-tauri/src/alecaframe/: client.rs
src-tauri/src/app/: client.rs  mod.rs
src-tauri/src/cache/: client.rs  mod.rs  structs.rs
src-tauri/src/commands/: alert.rs  analytics.rs  app.rs  auction.rs  auctions.rs  auth.rs  base.rs  cache.rs  chat.rs  dashboard.rs  debug.rs  handlers.rs  inventory.rs  item.rs  live_scraper.rs  log.rs  log_parser.rs  logs.rs  market.rs  mod.rs  notification.rs  order.rs  orders.rs  price_scraper.rs  qf_client.rs  riven.rs  sound.rs  stock.rs  stock_item.rs  stock_riven.rs  summary.rs  syndicate_price.rs  trade_entry.rs  transaction.rs  user.rs  warframe_gdpr.rs  wf_inventory.rs  whisper_scraper.rs  wish_list.rs
src-tauri/src/database/: client.rs  mod.rs
src-tauri/src/database2/: client.rs
src-tauri/src/enums/: find_by.rs  log_section.rs  mod.rs  order_mode.rs  stock_mode.rs  trade_item_type.rs  trade_mode.rs
src-tauri/src/handlers/: base.rs  mod.rs  stock_item.rs  stock_riven.rs  wish_list.rs
src-tauri/src/http_client/: client.rs  mod.rs  structs.rs
src-tauri/src/http_server/: helper.rs  mod.rs  server.rs
src-tauri/src/live_scraper/: client.rs  mod.rs
src-tauri/src/live_scraper2/: client.rs
src-tauri/src/log_parser/: client.rs  mod.rs
src-tauri/src/notification/: client.rs  mod.rs
src-tauri/src/qf_client/: client.rs  mod.rs  structs.rs
src-tauri/src/system_tray/: client.rs  mod.rs
src-tauri/src/types/: chat_link.rs  item_riven.rs  mod.rs  operation_set.rs  permissions_flags.rs  ui_events.rs
src-tauri/src/utils/: auction_ext.rs  auction_item_attribute_ext.rs  auction_list_ext.rs  create_stock_item_ext.rs  create_stock_riven_ext.rs  create_trade_entry_ext.rs  create_wish_list_item_ext.rs  error_ext.rs  helper_base.rs  helper_dataframe.rs  helper_discord.rs  helper_path.rs  helper_zip.rs  mod.rs  order_ext.rs  order_list_ext.rs  sub_type_ext.rs  wfm_auction_pagination_query_dto.rs  wfm_chat_pagination_query_dto.rs  wfm_order_pagination_query_dto.rs
src-tauri/src/wf_ee_log_parser/: client.rs  mod.rs
src-tauri/src/wf_inventory/: client.rs  mod.rs
src-tauri/src/wfm_client/: client.rs  mod.rs  structs.rs
src-tauri/src/wfm_client2/: client.rs
src-tauri/src/wfm_clients/: client.rs
src-tauri/utils/: Cargo.toml  GLOBAL_FILTERS.md  README.md
src-tauri/utils/examples/: advanced_grouping.rs  centered_logs.rs  clear_logs_demo.rs  combined_logging.rs  complete_filter_demo.rs  custom_base_path.rs  date_based_logging.rs  debug_zip.rs  demo.rs  error_context_demo.rs  error_handling_demo.rs  file_watcher.rs  global_filter_demo.rs  grouping_demo.rs  insert_at_demo.rs  json_error_demo.rs  json_extract_demo.rs  json_formatting_demo.rs  merge_json_demo.rs  multi_key_map_demo.rs  multiple_component_filter_demo.rs  refactored_error_logging.rs  retry_demo.rs  sensitive_data_masking_demo.rs  simple_error_test.rs  simple_filter_demo.rs  simple_folder_demo.rs  simple_grouping.rs  simple_json_logging.rs  simple_zip_test.rs  single_file_test.rs  test.rs  text_truncation_demo.rs  uuid_demo.rs  zip_demo.rs  zip_standalone_demo.rs
src-tauri/utils/src/: core.rs  error.rs  file_watcher.rs  grouping.rs  helper.rs  lib.rs  line_detection.rs  loki.rs  macros.rs  multi_key_map.rs  operation_set.rs  options.rs  properties.rs  retry_utils.rs  sorting.rs  stop_watch.rs  zip_folder.rs  zip_folder_new.rs  zip_logger.rs
(+1357 files in other folders)
