[package]
name = "Quantframe"
version = "1.4.1"
description = "Quantframe"
authors = ["Kenya-DK"]
license = ""
repository = "https://github.com/Kenya-DK/quantframe-react"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qf_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]

# Tauri dependencies
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
# Other dependencies
futures-util = "0.3.31"
tokio = { version = "1.29.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
uuid = {version = "1.17.0", features = ["v4"] }
regex = "1.9.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
eyre = "0.6.8"
zip = "0.6"
actix-web = "4"
actix-cors = "0.7.0"
sha256 = "1.5.0"

# Database dependencies
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }

[workspace]
members = [".", "service", "entity", "migration"]
