[package]
name = "Quantframe"
version = "1.6.7"
description = "Quantframe"
authors = ["Kenya-DK"]
license = ""
repository = "https://github.com/Kenya-DK/quantframe-react"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qf_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]

# Tauri dependencies
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.3.0"
# Other dependencies
reqwest = { version = "0.12.19", features = ["json"] }
tokio = {version =  "1.45.1", features = ["full"] }
regex = "1.9.1"
chrono = "0.4"
zip = "0.6"
sha256 = "1.5.0"
# wf-market = { path = "C:/Users/Kenya/Desktop/Andet/Coding/Warframe/wf-market" }
wf-market = { git = "https://github.com/KibbeWater/wf-market", rev = "c770ea31c45c9c7aa0fa52f9bc47e84a3672cb04" }

# Database dependencies
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
qf_api = { path = "./qf_api" }
utils = { path = "./utils" }

[workspace]
members = [".", "qf_api", "service", "entity", "migration", "utils"]
