[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.17.0", features = ["v5"] }

[dependencies.sea-orm]
version = "0.12.4" # sea-orm version