[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
regex = "1.0"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.17.0", features = ["v5"] }
sea-orm = "0.12.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
